added core-sections about page

--- a/about.html
+++ b/about.html
@@ -126,29 +126,64 @@
             </div>
             <!-- trophy3 -->
             <div class="core-3">
-                <div class="coreblock3">
-                  <p class="core-value-3">3</p>
-                  <img
-                    class="trophy3"
-                    src="/assets/images/trophy3.png"
-                    alt="trophy1"
-                  />
-                </div>
-                <div class="core-3-title">
-                  <p>Crafting The Best Experience</p>
-                </div>
-                <div class="core-border"></div>
-                <div class="core-description">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque ut turpis.
-                  </p>
-                </div>
+              <div class="coreblock3">
+                <p class="core-value-3">3</p>
+                <img
+                  class="trophy3"
+                  src="/assets/images/trophy3.png"
+                  alt="trophy1"
+                />
               </div>
-
+              <div class="core-3-title">
+                <p>A Passion For Innovation</p>
+              </div>
+              <div class="core-border"></div>
+              <div class="core-description">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Pellentesque ut turpis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!--core section right content -->
+          <div class="coresection-content">
+            <p class="cs-content1">IT’S A WORLD OF</p>
+            <p class="cs-content2">WINNERS</p>
           </div>
         </div>
       </div>
+      <!-- right three lines -->
+      <div class="right-lines">
+        <img class="aboutline-1" src="/assets/images/1line.png" alt="1line" />
+        <img class="aboutline-2" src="/assets/images/2line.png" alt="2line" />
+        <img class="aboutline-3" src="/assets/images/3line.png" alt="3line" />
+      </div>
+      <!-- reach us out -->
+      <div class="about-contact">
+        <div class="about-contact-content">
+          <p class="about-cc-1">REACH OUT</p>
+          <p class="about-cc-2">TO US AT</p>
+        </div>
+      </div>
+      <!-- last-block -->
+      <div class="about-last">
+        <div class="about-last-left">
+          <p class="al-content1">Lorem ipsum dolor sit amet, consectetur</p>
+          <p class="al-content2">
+            Suspendisse potenti. Interdum et malesuada fames ac ante ipsum
+            primis in faucibus. Etiam vel faucibus est. Etiam id luctus diam.
+            Fusce ornare lacinia orci, aliquam gravida lacus lobortis sit amet.
+            Sed tempus aliquam ipsum
+          </p>
+        </div>
+        <div class="about-last-right">
+            <p class="ar-content1">XX</p>
+            <p class="ar-content2">CREATORS</p>
+            <img class="ar-img" src="/assets/images/car f1-footer.png" alt="car-about-footer">
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
