fix responsiveness till 1500px

--- a/about.html
+++ b/about.html
@@ -165,6 +165,28 @@
           <p class="about-cc-1">REACH OUT</p>
           <p class="about-cc-2">TO US AT</p>
         </div>
+        <div class="about-contact-details">
+          <div class="ac-details-1">
+            <div class="acd-1">
+              <img src="/assets/images/@.png" alt="email">
+              <p>hi@podiumpe.com</p>
+            </div>
+            <div class="acd-2">
+              <img src="/assets/images/contact.png" alt="contact">
+              <p>+91-0755-4055530</p>
+            </div>
+          </div>
+          <div class="ac-details-2">
+            <div class="acd-3">
+              <img src="/assets/images/location.png" alt="location">
+              <p>Address: HIG-419, E-7, Arera Colony, Bhopal, MP</p>
+            </div>
+            <div class="acd-4">
+              <img src="/assets/images/grouparrowred.png" alt="grouparrow">
+            </div>
+          </div>
+
+        </div>
       </div>
       <!-- last-block -->
       <div class="about-last">
@@ -176,6 +198,26 @@
             Fusce ornare lacinia orci, aliquam gravida lacus lobortis sit amet.
             Sed tempus aliquam ipsum
           </p>
+          <!-- Page navigation -->
+          <div id="al-last-left-navigation">
+            <div class="al-page-navigation">
+              <div class="al-pn-1">
+                <a>
+                <img class="al-pn-img1" src="/assets/images/arrowLeft.png" alt="arrow">
+                </a>
+                <p>Back to Home</p>
+              </div>
+              <p class="al-pn-x">X</p>
+              <div class="al-pn-2">
+                <p>How It Works</p>
+                <a>
+                  <img class="al-pn-img2" src="/assets/images/arrowLeft.png" alt="arrow">
+                </a>
+              </div>
+            </div>
+            <div class="al-pn-border"></div>
+          </div>
+          
         </div>
         <div class="about-last-right">
             <p class="ar-content1">XX</p>
