checked FM responsiveness.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div id="card-content">
           <div class="fantasy">
             <div class="side-line"></div>
-            <h2>ENTER THE RALLY OF <span>FANTASY MOTORSPORTS</span></h2>
+            <h2><span>ENTER THE RALLY OF </span><br>FANTASY MOTORSPORTS</h2>
           </div>
           <div id="download-options-wrapper">
             <img class="download-options" src="./assets/images/XMLID_206_.png" alt="play-store" loading="lazy" />
