fix responsiveness till 1200

--- a/about.html
+++ b/about.html
@@ -164,6 +164,8 @@
         <div class="about-contact-content">
           <p class="about-cc-1">REACH OUT</p>
           <p class="about-cc-2">TO US AT</p>
+          <!-- 1200 px image arrow -->
+          <img class="about-arrow-1200" src="/assets/images/arrowRed1200.png" alt="arrowRight">
         </div>
         <div class="about-contact-details">
           <div class="ac-details-1">
@@ -185,8 +187,25 @@
               <img src="/assets/images/grouparrowred.png" alt="grouparrow">
             </div>
           </div>
-
         </div>
+        <!-- 1200px  -->
+        <div class="about-contact-details-1200">
+          <div class="ac-details-1-1200">
+            <div class="acd-1-1200">
+              <img src="/assets/images/@.png" alt="email">
+              <p>hi@podiumpe.com</p>
+            </div>
+            <div class="acd-2-1200">
+              <img src="/assets/images/contact.png" alt="contact">
+              <p>+91-0755-4055530</p>
+            </div>
+            <div class="acd-3-1200">
+              <img src="/assets/images/location.png" alt="location">
+              <p>Address: HIG-419, E-7, Arera Colony, Bhopal, MP</p>
+            </div>
+          </div>
+        </div>
+        <!-- 1200px end -->
       </div>
       <!-- last-block -->
       <div class="about-last">
@@ -224,6 +243,25 @@
             <p class="ar-content2">CREATORS</p>
             <img class="ar-img" src="/assets/images/car f1-footer.png" alt="car-about-footer">
         </div>
+      </div>
+      <!-- 1200px  -->
+      <div id="al-last-left-navigation-1200">
+        <div class="al-page-navigation-1200">
+          <div class="al-pn-1-1200">
+            <a>
+            <img class="al-pn-img1-1200" src="/assets/images/arrowLeft.png" alt="arrow">
+            </a>
+            <p>Back to Home</p>
+          </div>
+          <p class="al-pn-x-1200">X</p>
+          <div class="al-pn-2-1200">
+            <p>How It Works</p>
+            <a>
+              <img class="al-pn-img2-1200" src="/assets/images/arrowLeft.png" alt="arrow">
+            </a>
+          </div>
+        </div>
+        <div class="al-pn-border-1200"></div>
       </div>
       
     </div>
