about page - fix responsiveness till 780px , termsandservice - integrated navbar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="navbar-menu">
           <img
             id="logo"
+            class="navbar-logo"
             src="./assets/images/res-navbar.svg"
             alt="logo"
             loading="lazy"
