--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="res-link" href="./index.html">
               <li>Home</li>
             </a>
-            <a>
+            <a href="./about.html">
               <li>About</li>
             </a>
             <a>
