--- a/how-to-play.html
+++ b/how-to-play.html
@@ -172,12 +172,31 @@
     </div>
 
     <div class="cmg-soon">
+        <div class="left-rect">
+            <img class="rect2" src="./assets/images/Rectangle 40756.png" alt="">
+            <img class="rect3" src="./assets/images/Rectangle 40756.png" alt="">
+        </div>
         <div class="r-man">
             <img class="img1" src="./assets/images/racing-man.png" alt="">
+            <img class="rect1" src="./assets/images/Rectangle 40756.png" alt="">
             <h1><i><b>COMING SOON!</b></i></h1>
         </div>
-
+        <div class="right-rect">
+            <img class="rect4" src="./assets/images/Rectangle 40756.png" alt="">
+            <img class="rect5" src="./assets/images/Rectangle 40756.png" alt="">
+        </div>
     </div>
+
+    <div class="apps">
+        <img src="./assets/images/download-on-the-app-store 4.png" alt="">
+        <img src="./assets/images/Group 9163.png" alt="">
+    </div>
+    <img class="rect6" src="./assets/images/Rectangle 40756.png" alt="">
+
+
+
+
+
 
 
     <footer>
@@ -213,7 +232,7 @@
                         Explore our community of car enthusiasts for more engaging discussions.
                     </p>
                     <div id="pm-subcard">
-                        <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
+                        <img class="lights-out" src="./assets/images/Group 9048.png" alt="raceline">
                         <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
                   <span id="subcard-footer-text"
                     ><span id="subcard-footer-text-heading">Lights Out</span> By
@@ -221,7 +240,7 @@
                   >
                   <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
 
-                        <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
+                        <!-- <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow"> -->
 
                     </div>
                 </div>
