--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
   </main>
   <footer>
     <!-- <img src="./assets/images/footer.png" id="footer-img" /> -->
-    <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
+    <img src="./assets/images/Group 9223.png" id="footer-img-m" />
     <div id="footer-content">
       <div id="footer-content-left">
         <div id="footer-content-logo-wrapper">
@@ -459,33 +459,36 @@
       </div>
     </div>
     <div id="footer-content-m">
-      <li><a href="TermsAndService.html" class="footer-links">Terms & Conditions</a></li>
-      <li><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
-      <li><a href="help-support.html" class="footer-links">Help & Support</a></li>
-      <div id="footer-card">
-        <div id="footer-card-header">
-          <!-- <div id="footer-card-header-m-logo">
-              <img src="./assets/images/logo2.svg" />
-            </div>
-
-            <span id="footer-card-hearer-text"
-              ><span id="footer-card-hearer-text-heading">Lights Out</span> By
-              Podium Pe</span
-            > -->
-          <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-          <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
-        </div>
-        <p>
-          Explore our community of car enthusiasts for more engaging discussions.
-        </p>
+      <div class="foot-nav-m">
+        <li><a href="TermsAndService.html" class="footer-links">Terms & Conditions</a></li>
+        <li class="center-txt"><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
+        <li class="right-txt"><a href="help-support.html" class="footer-links">Help & Support</a></li>
       </div>
+
+
       <div id="footer-subcard">
         <div id="footer-subcard-logo">
           <img src="./assets/images/blogo.svg" />
         </div>
-        <div id="footer-subcard-content">
-          <h4>Podium Pe</h4>
-          <p>A Product of Shortsqueeze Pvt Ltd.</p>
+        <div class="mid-cont-m">
+          <div id="footer-subcard-content">
+            <h4>Podium Pe</h4>
+            <p>A Product of <br> Shortsqueeze Pvt Ltd.</p>
+          </div>
+          <div class="copyright">
+            <p>Copyright</p>
+            <p>2023</p>
+          </div>
+        </div>
+
+      </div>
+      <div id="footer-card">
+        <p>
+          Explore our community of car enthusiasts for more engaging discussions.
+        </p>
+        <div id="footer-card-header">
+          <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
+          <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
         </div>
       </div>
     </div>
