worked on mobile version

--- a/about.html
+++ b/about.html
@@ -71,6 +71,15 @@
           </div>
           <p class="carf-text3">VISION</p>
         </div>
+        <!-- car front text mobile version start-->
+        <div class="car-front-text-mobile">
+          <p class="carf-text1-mobile">XX</p>
+          <div class="carf-row2-mobile">
+            <p class="carf-text2-mobile">OUR</p>
+            <p class="carf-text3-mobile">VISION</p>
+          </div>
+        </div>
+        <!-- car front text mobile version end -->
         <!-- core values section -->
         <div id="corevalue-section">
           <div class="core-title">
@@ -153,6 +162,17 @@
           </div>
         </div>
       </div>
+      <!-- core section mobile start -->
+      <div id="core-section-mobile">
+        <div class="cs-title-mobile">
+          <p class="cs-title-1-mobile">CORE</p>
+          <div class="cs-content-mobile">
+            <p class="cs-content1-mobile">IT’S A WORLD OF</p>
+            <p class="cs-content2-mobile">WINNERS</p>
+          </div>
+        </div> 
+        <p class="cs-title-2-mobile">VALUES</p>
+      </div>
       <!-- right three lines -->
       <div class="right-lines">
         <img class="aboutline-1" src="/assets/images/1line.png" alt="1line" />
@@ -165,26 +185,30 @@
           <p class="about-cc-1">REACH OUT</p>
           <p class="about-cc-2">TO US AT</p>
           <!-- 1200 px image arrow -->
-          <img class="about-arrow-1200" src="/assets/images/arrowRed1200.png" alt="arrowRight">
+          <img
+            class="about-arrow-1200"
+            src="/assets/images/arrowRed1200.png"
+            alt="arrowRight"
+          />
         </div>
         <div class="about-contact-details">
           <div class="ac-details-1">
             <div class="acd-1">
-              <img src="/assets/images/@.png" alt="email">
+              <img src="/assets/images/@.png" alt="email" />
               <p>hi@podiumpe.com</p>
             </div>
             <div class="acd-2">
-              <img src="/assets/images/contact.png" alt="contact">
+              <img src="/assets/images/contact.png" alt="contact" />
               <p>+91-0755-4055530</p>
             </div>
           </div>
           <div class="ac-details-2">
             <div class="acd-3">
-              <img src="/assets/images/location.png" alt="location">
+              <img src="/assets/images/location.png" alt="location" />
               <p>Address: HIG-419, E-7, Arera Colony, Bhopal, MP</p>
             </div>
             <div class="acd-4">
-              <img src="/assets/images/grouparrowred.png" alt="grouparrow">
+              <img src="/assets/images/grouparrowred.png" alt="grouparrow" />
             </div>
           </div>
         </div>
@@ -192,15 +216,15 @@
         <div class="about-contact-details-1200">
           <div class="ac-details-1-1200">
             <div class="acd-1-1200">
-              <img src="/assets/images/@.png" alt="email">
+              <img src="/assets/images/@.png" alt="email" />
               <p>hi@podiumpe.com</p>
             </div>
             <div class="acd-2-1200">
-              <img src="/assets/images/contact.png" alt="contact">
+              <img src="/assets/images/contact.png" alt="contact" />
               <p>+91-0755-4055530</p>
             </div>
             <div class="acd-3-1200">
-              <img src="/assets/images/location.png" alt="location">
+              <img src="/assets/images/location.png" alt="location" />
               <p>Address: HIG-419, E-7, Arera Colony, Bhopal, MP</p>
             </div>
           </div>
@@ -222,7 +246,11 @@
             <div class="al-page-navigation">
               <div class="al-pn-1">
                 <a>
-                <img class="al-pn-img1" src="/assets/images/arrowLeft.png" alt="arrow">
+                  <img
+                    class="al-pn-img1"
+                    src="/assets/images/arrowLeft.png"
+                    alt="arrow"
+                  />
                 </a>
                 <p>Back to Home</p>
               </div>
@@ -230,18 +258,25 @@
               <div class="al-pn-2">
                 <p>How It Works</p>
                 <a>
-                  <img class="al-pn-img2" src="/assets/images/arrowLeft.png" alt="arrow">
+                  <img
+                    class="al-pn-img2"
+                    src="/assets/images/arrowLeft.png"
+                    alt="arrow"
+                  />
                 </a>
               </div>
             </div>
             <div class="al-pn-border"></div>
           </div>
-          
         </div>
         <div class="about-last-right">
-            <p class="ar-content1">XX</p>
-            <p class="ar-content2">CREATORS</p>
-            <img class="ar-img" src="/assets/images/car f1-footer.png" alt="car-about-footer">
+          <p class="ar-content1">XX</p>
+          <p class="ar-content2">CREATORS</p>
+          <img
+            class="ar-img"
+            src="/assets/images/car f1-footer.png"
+            alt="car-about-footer"
+          />
         </div>
       </div>
       <!-- 1200px  -->
@@ -249,7 +284,11 @@
         <div class="al-page-navigation-1200">
           <div class="al-pn-1-1200">
             <a>
-            <img class="al-pn-img1-1200" src="/assets/images/arrowLeft.png" alt="arrow">
+              <img
+                class="al-pn-img1-1200"
+                src="/assets/images/arrowLeft.png"
+                alt="arrow"
+              />
             </a>
             <p>Back to Home</p>
           </div>
@@ -257,13 +296,16 @@
           <div class="al-pn-2-1200">
             <p>How It Works</p>
             <a>
-              <img class="al-pn-img2-1200" src="/assets/images/arrowLeft.png" alt="arrow">
+              <img
+                class="al-pn-img2-1200"
+                src="/assets/images/arrowLeft.png"
+                alt="arrow"
+              />
             </a>
           </div>
         </div>
         <div class="al-pn-border-1200"></div>
       </div>
-      
     </div>
   </body>
 </html>
