--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </svg>
         <div class="navbar-menu">
           <img
-            id="logo"
+            id="navbarlogo"
             src="./assets/images/res-navbar.svg"
             alt="logo"
             loading="lazy"
