--- a/how-to-play.html
+++ b/how-to-play.html
@@ -172,12 +172,31 @@
     </div>
 
     <div class="cmg-soon">
+        <div class="left-rect">
+            <img class="rect2" src="./assets/images/Rectangle 40756.png" alt="">
+            <img class="rect3" src="./assets/images/Rectangle 40756.png" alt="">
+        </div>
         <div class="r-man">
             <img class="img1" src="./assets/images/racing-man.png" alt="">
+            <img class="rect1" src="./assets/images/Rectangle 40756.png" alt="">
             <h1><i><b>COMING SOON!</b></i></h1>
         </div>
-
+        <div class="right-rect">
+            <img class="rect4" src="./assets/images/Rectangle 40756.png" alt="">
+            <img class="rect5" src="./assets/images/Rectangle 40756.png" alt="">
+        </div>
     </div>
+
+    <div class="apps">
+        <img src="./assets/images/download-on-the-app-store 4.png" alt="">
+        <img src="./assets/images/Group 9163.png" alt="">
+    </div>
+    <img class="rect6" src="./assets/images/Rectangle 40756.png" alt="">
+
+
+
+
+
 
 
     <footer>
@@ -220,9 +239,7 @@
                     Podium Pe</span
                   >
                   <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
-
                         <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
-
                     </div>
                 </div>
             </div>
