--- a/about.html
+++ b/about.html
@@ -456,153 +456,140 @@
         src="./assets/images/mobile/mobilearrowred.png"
         alt="arrowred"
       />
-    </div>
-    <div class="about-last-mobile">
-      <div class="about-last1-mobile">
-        <p class="alm-last1-1">CREATORS</p>
-        <p class="alm-last1-2">XX</p>
-        <img
-          class="alm-last1-img"
-          src="/assets/images/mobile/footercarmobile.png"
-          alt="carmobile"
-        />
-      </div>
-      <div class="about-last2-mobile">
-        <p class="alm-last2-1">Crafted by Shortsqueeze.</p>
-        <p class="alm-last2-2">
-          Shortsqueeze Pvt. Ltd. is a tech company that is constantly moving up
-          the ladder bringing new products and experiences to millions of people
-          through innovation, dedication, and a collective drive of a team of
-          experts.
-        </p>
-      </div>
-      <div class="about-mobile-navigation">
-        <div class="amv-1">
-          <a href="/about.html">
-            <img class="amv-arrow1" src="/assets/images/arrowLeft.png" alt="" />
-          </a>
-          <p class="amv-desc-1">Back to Home</p>
+      <!--  -->
+      <div class="about-last-mobile">
+        <div class="about-last1-mobile">
+          <p class="alm-last1-1">CREATORS</p>
+          <p class="alm-last1-2">XX</p>
+          <img
+            class="alm-last1-img"
+            src="/assets/images/mobile/footercarmobile.png"
+            alt="carmobile"
+          />
         </div>
-        <div class="amv-border"></div>
-        <div class="amv-2">
-          <p class="amv-desc-2">How It Works</p>
-          <a href="/how-to-play.html">
-            <img class="amv-arrow2" src="/assets/images/arrowLeft.png" alt="" />
-          </a>
+        <div class="about-last2-mobile">
+          <p class="alm-last2-1">Crafted by Shortsqueeze.</p>
+          <p class="alm-last2-2">
+            Shortsqueeze Pvt. Ltd. is a tech company that is constantly moving up
+            the ladder bringing new products and experiences to millions of people
+            through innovation, dedication, and a collective drive of a team of
+            experts.
+          </p>
         </div>
-      </div>
-    </div>
-    <div id="about-footer">
-      <footer>
-        <!-- <img src="./assets/images/footer.png" id="footer-img" /> -->
-        <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
-        <div id="footer-content">
-          <div id="footer-content-left">
-            <div id="footer-content-logo-wrapper">
-              <div id="pm-logo">
-                <img src="./assets/images/blogo.svg" />
-              </div>
-              <div id="pm-text">
-                <small>Podium Pe</small>
-                <span>A Product of Shortsqueeze Pvt Ltd.</span>
-              </div>
-            </div>
-            <div id="copyright">Copyright @2023</div>
+        <div class="about-mobile-navigation">
+          <div class="amv-1">
+            <a href="/about.html">
+              <img class="amv-arrow1" src="/assets/images/arrowLeft.png" alt="" />
+            </a>
+            <p class="amv-desc-1">Back to Home</p>
           </div>
-          <div id="footer-content-right">
-            <div id="pm-nav">
-              <div class="pm-nav-items">
-                <a href="TermsAndService.html" class="footer-links"
-                  >Terms & Conditions</a
-                >
+          <div class="amv-border"></div>
+          <div class="amv-2">
+            <p class="amv-desc-2">How It Works</p>
+            <a href="/how-to-play.html">
+              <img class="amv-arrow2" src="/assets/images/arrowLeft.png" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- <div id="about-footer">
+        <footer>
+          <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
+          <div id="footer-content">
+            <div id="footer-content-left">
+              <div id="footer-content-logo-wrapper">
+                <div id="pm-logo">
+                  <img src="./assets/images/blogo.svg" />
+                </div>
+                <div id="pm-text">
+                  <small>Podium Pe</small>
+                  <span>A Product of Shortsqueeze Pvt Ltd.</span>
+                </div>
               </div>
-              <div class="pm-nav-items">
-                <a href="PrivacyPolicy.html" class="footer-links"
-                  >Privacy Policy</a
-                >
+              <div id="copyright">Copyright @2023</div>
+            </div>
+            <div id="footer-content-right">
+              <div id="pm-nav">
+                <div class="pm-nav-items">
+                  <a href="TermsAndService.html" class="footer-links"
+                    >Terms & Conditions</a
+                  >
+                </div>
+                <div class="pm-nav-items">
+                  <a href="PrivacyPolicy.html" class="footer-links"
+                    >Privacy Policy</a
+                  >
+                </div>
+                <div class="pm-nav-items">
+                  <a href="help-support.html" class="footer-links"
+                    >Help & Support</a
+                  >
+                </div>
               </div>
-              <div class="pm-nav-items">
-                <a href="help-support.html" class="footer-links"
-                  >Help & Support</a
-                >
+              <div id="pm-card">
+                <p id="pm-card-text">
+                  Explore our community of car enthusiasts for more engaging
+                  discussions.
+                </p>
+                <div id="pm-subcard">
+                  <img
+                    class="raceline"
+                    src="./assets/images/racelinen.png"
+                    alt="raceline"
+                  />
+                  <img
+                    class="arrow-footer"
+                    src="./assets/images/arrowblack.png"
+                    alt="arrow"
+                  />
+                </div>
               </div>
             </div>
-            <div id="pm-card">
-              <p id="pm-card-text">
-                Explore our community of car enthusiasts for more engaging
-                discussions.
-              </p>
-              <div id="pm-subcard">
+          </div>
+          <div id="footer-content-m">
+            <li>
+              <a href="TermsAndService.html" class="footer-links"
+                >Terms & Conditions</a
+              >
+            </li>
+            <li>
+              <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="help-support.html" class="footer-links">Help & Support</a>
+            </li>
+            <div id="footer-card">
+              <div id="footer-card-header">
                 <img
                   class="raceline"
                   src="./assets/images/racelinen.png"
                   alt="raceline"
                 />
-                <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
-                  <span id="subcard-footer-text"
-                    ><span id="subcard-footer-text-heading">Lights Out</span> By
-                    Podium Pe</span
-                  >
-                  <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
                 <img
                   class="arrow-footer"
                   src="./assets/images/arrowblack.png"
-                  alt="arrow"
+                  id="subcard-footer-arrow"
                 />
+              </div>
+              <p>
+                Explore our community of car enthusiasts for more engaging
+                discussions.
+              </p>
+            </div>
+            <div id="footer-subcard">
+              <div id="footer-subcard-logo">
+                <img src="./assets/images/blogo.svg" />
+              </div>
+              <div id="footer-subcard-content">
+                <h4>Podium Pe</h4>
+                <p>A Product of Shortsqueeze Pvt Ltd.</p>
               </div>
             </div>
           </div>
-        </div>
-        <div id="footer-content-m">
-          <li>
-            <a href="TermsAndService.html" class="footer-links"
-              >Terms & Conditions</a
-            >
-          </li>
-          <li>
-            <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="help-support.html" class="footer-links">Help & Support</a>
-          </li>
-          <div id="footer-card">
-            <div id="footer-card-header">
-              <!-- <div id="footer-card-header-m-logo">
-                  <img src="./assets/images/logo2.svg" />
-                </div>
-    
-                <span id="footer-card-hearer-text"
-                  ><span id="footer-card-hearer-text-heading">Lights Out</span> By
-                  Podium Pe</span
-                > -->
-              <img
-                class="raceline"
-                src="./assets/images/racelinen.png"
-                alt="raceline"
-              />
-              <img
-                class="arrow-footer"
-                src="./assets/images/arrowblack.png"
-                id="subcard-footer-arrow"
-              />
-            </div>
-            <p>
-              Explore our community of car enthusiasts for more engaging
-              discussions.
-            </p>
-          </div>
-          <div id="footer-subcard">
-            <div id="footer-subcard-logo">
-              <img src="./assets/images/blogo.svg" />
-            </div>
-            <div id="footer-subcard-content">
-              <h4>Podium Pe</h4>
-              <p>A Product of Shortsqueeze Pvt Ltd.</p>
-            </div>
-          </div>
-        </div>
-      </footer>
+        </footer>
+      </div> -->
     </div>
+    
   </body>
   <script>
     const menu = document.querySelector("#hamburger-menu-wrapper");
