--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <a class="res-link" href="./index.html">
               <li>Home</li>
             </a>
-            <a>
+            <a href="./about.html">
               <li>About</li>
             </a>
-            <a>
+            <a href="./how-to-play.html">
               <li>How to play</li>
             </a>
             <a class="res-link" href="./TermsAndService.html">
