--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
     <div id="footer-content-m">
       <div class="foot-links">
         <li><a href="TermsAndService.html" class="footer-links">Terms & Conditions</a></li>
-        <li><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
-        <li><a href="help-support.html" class="footer-links">Help & Support</a></li>
+        <li class="center-align"><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
+        <li class="right-align"><a href="help-support.html" class="footer-links">Help & Support</a></li>
       </div>
 
       <div id="footer-subcard">
