improved the design of the footer

--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -14,24 +14,6 @@
 <body>
   <header>
     <img id="logo" src="./assets/images/logo2.svg" alt="logo" loading="lazy" />
-    <!-- <nav>
-      <ul id="nav-menu">
-        <a>
-          <li>About</li>
-        </a>
-        <a>
-          <li>How to Play</li>
-        </a>
-        <div id="category-dropmenu">
-          <a>
-            <li>Category</li>
-          </a>
-          <div id="drop-arrow">
-            <img src="./assets/images/nav.svg" alt="down-arrow" />
-          </div>
-        </div>
-      </ul>
-    </nav> -->
     <nav>
       <svg class="close" xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 27 27" fill="none">
         <path d="M2 24.6274L24.6274 2.00002" stroke="white" stroke-width="4" />
@@ -1080,7 +1062,7 @@
         </div>
         <div id="footer-subcard-content">
           <div class="left-side">
-            <h4>Podium Pe</h4>
+            <h4 class="podiumpe-text-mobile-footer">Podium Pe</h4>
             <p>A Product of <br>Shortsqueeze Pvt Ltd.</p>
           </div>
           <div class="copyright">
@@ -1088,21 +1070,11 @@
           </div>
         </div>
       </div>
-
-
       <div id="footer-card">
         <p>
           Explore our community of car enthusiasts for more engaging discussions.
         </p>
         <div id="footer-card-header">
-          <!-- <div id="footer-card-header-m-logo">
-              <img src="./assets/images/logo2.svg" />
-            </div>
-
-            <span id="footer-card-hearer-text"
-              ><span id="footer-card-hearer-text-heading">Lights Out</span> By
-              Podium Pe</span
-            > -->
           <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
           <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
         </div>
