--- a/index.html
+++ b/index.html
@@ -518,53 +518,36 @@
           </p>
           <div id="pm-subcard">
             <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-            <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
-              <span id="subcard-footer-text"
-                ><span id="subcard-footer-text-heading">Lights Out</span> By
-                Podium Pe</span
-              >
-              <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
             <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
           </div>
         </div>
       </div>
     </div>
     <div id="footer-content-m">
-      <div class="foot-links">
-        <li><a href="TermsAndService.html" class="footer-links">Terms & Conditions</a></li>
-        <li class="center-align"><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
-        <li class="right-align"><a href="help-support.html" class="footer-links">Help & Support</a></li>
+      <div class="foot-link-div">
+        <a href="TermsAndService.html" class="footer-link">Terms & Conditions</a>
+        <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy</a>
+        <a href="help-support.html" class="footer-link right-align">Help & Support</a>
       </div>
-
       <div id="footer-subcard">
         <div id="footer-subcard-logo">
           <img src="./assets/images/blogo.svg" />
         </div>
         <div id="footer-subcard-content">
           <div class="left-side">
-            <h4>Podium Pe</h4>
-            <p>A Product of <br>Shortsqueeze Pvt Ltd.</p>
+            <h4 class="podiumpe-head-mobile-footer">Podium Pe</h4>
+            <p  class="podiumpe-text-mobile-footer">A Product of <br>Shortsqueeze Pvt Ltd.</p>
           </div>
-          <div class="copyright">
-            <p>Copyright <br> 2023</p>
+          <div>
+            <p class="copyright-text-mobile">Copyright <br> 2023</p>
           </div>
         </div>
       </div>
-
-
       <div id="footer-card">
-        <p>
+        <p class="footer-text-racingline">
           Explore our community of car enthusiasts for more engaging discussions.
         </p>
-        <div id="footer-card-header">
-          <!-- <div id="footer-card-header-m-logo">
-              <img src="./assets/images/logo2.svg" />
-            </div>
-
-            <span id="footer-card-hearer-text"
-              ><span id="footer-card-hearer-text-heading">Lights Out</span> By
-              Podium Pe</span
-            > -->
+        <div class="footer-logo-div-racingline">
           <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
           <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
         </div>
