--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             <p class="podiumpe-text-mobile-footer">A Product of <br>Shortsqueeze Pvt Ltd.</p>
           </div>
           <div>
-            <p class="copyright-text-mobile">Copyright <br> 2023</p>
+            <p class="copyright-text-mobile">Copyright <br>@2023</p>
           </div>
         </div>
       </div>
